Hever: Fix alignfull first-element if homepage title is hidden

--- a/hever/sass/_extra-child-theme.scss
+++ b/hever/sass/_extra-child-theme.scss
@@ -270,13 +270,30 @@ article .entry-header .entry-title,
   }
 }
 
-.singular:not(.home.hide-homepage-title) .hentry .entry-content {
-	& > *:first-child {
-		&.alignfull {
-			margin-top: -#{0.666 * map-deep-get($config-global, "spacing", "vertical")};
+// Remove margin if alignfull is first element
+.singular {
+	.hentry .entry-content {
+		& > *:first-child {
+			&.alignfull {
+				margin-top: -#{0.666 * map-deep-get($config-global, "spacing", "vertical")};
 
-			@include media(mobile) {
-				margin-top: -#{2 * map-deep-get($config-global, "spacing", "vertical")};
+				@include media(mobile) {
+					margin-top: -#{2 * map-deep-get($config-global, "spacing", "vertical")};
+				}
+			}
+		}
+	}
+}
+
+.home.hide-homepage-title {
+	.hentry .entry-content {
+		& > *:first-child {
+			&.alignfull {
+				margin-top: 0;
+
+				@include media(mobile) {
+					margin-top: 0;
+				}
 			}
 		}
 	}
