--- a/hever/style.css
+++ b/hever/style.css
@@ -3455,13 +3455,23 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 	color: #1279BE;
 }
 
-.singular:not(.home.hide-homepage-title) .hentry .entry-content > *:first-child.alignfull {
+.singular .hentry .entry-content > *:first-child.alignfull {
 	margin-top: -21.312px;
 }
 
 @media only screen and (min-width: 560px) {
-	.singular:not(.home.hide-homepage-title) .hentry .entry-content > *:first-child.alignfull {
+	.singular .hentry .entry-content > *:first-child.alignfull {
 		margin-top: -64px;
+	}
+}
+
+.home.hide-homepage-title .hentry .entry-content > *:first-child.alignfull {
+	margin-top: 0;
+}
+
+@media only screen and (min-width: 560px) {
+	.home.hide-homepage-title .hentry .entry-content > *:first-child.alignfull {
+		margin-top: 0;
 	}
 }
 
